--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2118,7 +2118,7 @@
 			
 				
 				vertical-align: text-top;
-				position: fixed;
+				position: absolute;
 
 				left: 43%;
 				margin-top: 1.8em;
